--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,6 +67,14 @@ header div img {
     width: 100%;
 }
 
+/*MENU HAMBURGUESA*/
+header label{
+    display: none;
+}
+header .inputMenu{
+    display: none;
+}
+
 header nav ul{
     display: flex;
     list-style-type: none;
@@ -126,8 +134,8 @@ header nav ul li:hover ul {
     color: white;
     font-size: 50px;
     top: 40%;
-    left: 12%;
     z-index: 1;
+    width: 100%;
 }
 
 #main-index{
@@ -362,6 +370,7 @@ aside .card{
     header label{
         width: 40%;
         text-align: end;
+        display: block;
     }
     header label i{
         color: white;
@@ -379,9 +388,6 @@ aside .card{
         width: 100%;
         height: 100vh;
         padding: 20px;
-    }
-    .inputMenu{
-        display: none;
     }
     .inputMenu:checked + nav {
         transform: translateX(0);
